# ascent-obs

./: .gitattributes  README.md
ascent-obs/: .gitignore  ascent-obs.sln
ascent-obs-comm/: Cargo.toml
ascent-obs-comm/src/: communication.rs  config.rs  errors.rs  event_handler.rs  lib.rs  main.rs  recorder.rs
ascent-obs-comm/src/types/: codes.rs  commands.rs  encoder.rs  enums.rs  events.rs  fields.rs  mod.rs  settings.rs
ascent-obs/ascent-obs/: Resource.h  ascent-obs.filters  ascent-obs.manifest  ascent-obs.rc  ascent-obs.vcxproj  ascent_obs_logger.cpp  ascent_obs_logger.h  command_line.cpp  command_line.h  main.cpp  message_loop.cpp  message_loop.h  server.cpp  server.h  switches.h
ascent-obs/libascentobs/: libascentobs.vcxproj
ascent-obs/libowobs/: libowobs.vcxproj
obs-studio/: CMakeLists.txt
obs-studio/UI/: obs-app.cpp  window-basic-main.cpp
obs-studio/docs/: index.md
obs-studio/libobs/: CMakeLists.txt  obs-encoder.c  obs-encoder.h  obs-internal.h  obs-module.c  obs-output.c  obs-scene.c  obs-scene.h  obs-source.c  obs-video-gpu-encode.c  obs-win-crash-handler.c  obs-windows.c  obs.c  obs.h  obs.hpp
obs-studio/libobs-d3d11/: d3d11-duplicator.cpp  d3d11-subsystem.cpp
obs-studio/plugins/: CMakeLists.txt
ow-obs/: .gitignore  ow-obs.sln
ow-obs/libowobs/: libowobs.vcxproj  libowobs.vcxproj.filters
ow-obs/ow-obs/: README.md  Resource.h  main.cpp  message_loop.cpp  message_loop.h  ow-obs.manifest  ow-obs.rc  ow-obs.vcxproj  ow-obs.vcxproj.filters  ow_obs_logger.cpp  ow_obs_logger.h  server.cpp  server.h  (+1 more)
scripts/: build_script.ps1  file_tree.ps1
(+324 files in other folders)
