[package]
name = "ascent-obs-comm"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
mp4ameta = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = { version = "1.0.140", features = ["raw_value"] }
serde_repr = "0.1.20"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
